# tangle-mcp-blueprint

./: .dockerignore  Cargo.toml  Dockerfile  README.md  flake.nix  run.sh
.cargo/: config.toml
.github/prompts/: coding_standards.prompt.md  context_and_state.prompt.md  docker_usage.prompt.md  general_guidelines.prompt.md  project_structure.prompt.md  tangle_blueprint.prompt.md  testing.prompt.md
.roo/: system-prompt-flow-architect  system-prompt-flow-ask  system-prompt-flow-code  system-prompt-flow-debug
blueprint/: Cargo.toml
blueprint/src/: lib.rs
blueprint/src/jobs/: create_project.rs  create_workspace.rs  destroy_project.rs  destroy_workspace.rs  mod.rs
blueprint/tests/: create_workspace.json  e2e.rs
memory-bank/: activeContext.md  decisionLog.md  docktopus.md  productContext.md  progress.md  projectStructure.md  sharedConcepts.md  systemPatterns.md  tangle.md
