[workspace]
resolver = "3"
members = ["blueprint", "bin"]

[workspace.package]
version = "0.1.0"
description = "A Blueprint to run tangle MCP remotely in a container"
edition = "2024"
authors = ["Shady Khalifa <dev+github@shadykhalifa.me>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tangle-network/tangle-mcp-blueprint"
repository = "https://github.com/tangle-network/tangle-mcp-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]

[workspace.dependencies]
tangle-mcp-blueprint = { path = "blueprint" }

blueprint-sdk = { version = "0.1.0-alpha.7", default-features = false }
# blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git" }
# blueprint-sdk = { path = "../gadget/crates/sdk" }
tokio = { version = "1", default-features = false }
color-eyre = "0.6"
tower = { version = "0.5", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
docktopus = { version = "0.4.0-alpha.2", default-features = false }
serde = { version = "^1", default-features = false }
serde_json = { version = "^1", default-features = false }
